# zx_spectrum_emulator

./: .gitignore  BuildDefs.h.in  CMakeLists.txt  Log4cxxConfig.xml  Main.cpp
Tests/: .Z80CPUOpcodesALUTests.cpp.swp  .Z80CPUOpcodesJumpTests.cpp.swp  .Z80CPUShitRotateTests.cpp.swp  CMakeLists.txt  Helpers.cpp  Helpers.hpp  Main.cpp  Z80CPUBlockOpcodesTests.cpp  Z80CPUDDPrefix.cpp  Z80CPUEDPrefix.cpp  Z80CPUFDPrefix.cpp  Z80CPUModuleTest.hpp  Z80CPUModuleTests.cpp  Z80CPUOpcodesALUTests.cpp  Z80CPUOpcodesCallRetTests.cpp  Z80CPUOpcodesDebugTests.cpp  Z80CPUOpcodesJumpTests.cpp  Z80CPUOpcodesLoadTests.cpp  Z80CPUOpcodesStackTests.cpp  Z80CPUShitRotateTests.cpp  Z80MemoryTests.cpp
VIDEO/: mainwindow.cpp  mainwindow.h
Z80CPU/: .Z80Memory.cpp.swp  .Z80Opcodes.cpp.swo  .Z80Opcodes.cpp.swp  .Z80OpcodesCB.cpp.swp  .Z80OpcodesNormal.cpp.swp  .Z80Registers.cpp.swp  CMakeCache.txt  CMakeLists.txt  Z80CPUModule.cpp  Z80CPUModule.hpp  Z80CPUModuleThread.cpp  Z80CPUModuleThread.hpp  Z80Memory.cpp  Z80Memory.hpp  Z80Opcodes.cpp  Z80Opcodes.hpp  Z80OpcodesCB.cpp  Z80OpcodesED.cpp  Z80OpcodesMacros.hpp  Z80OpcodesNormal.cpp  Z80OpcodesPrint.cpp  Z80Registers.cpp  Z80Registers.hpp  Z80Timing.hpp  Z80Types.hpp
console/: CMakeLists.txt  console.cpp  console.hpp
scripts/: script1  script2  script3  script4  script5  script6  script_first_bug  script_ml  script_second_bug
video/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
